--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>demo dự án quản lý git</title>
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-    
+    <h1>đây là dự án git đầu tiên</h1>
 </body>
 </html>
