--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-    <h1>đây là dự án git đầu tiên dev b code abchhhhh</h1>
+    <h1>đây là dự án git đầu tiên dev b code abchhhhh</h1><p>dbhjdfsdbdjfs</p>
+    <p>sjhjdshjjjhh</p>
 </body>
 </html>
