--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,17 @@
     <title>demo dự án quản lý git</title>
     <link rel="stylesheet" href="/styles/style.css">
 </head>
+
 <body>
-    <h1>đây là dự án git đầu tiên dev b code abchhhhh</h1><p>dbhjdfsdbdjfs</p>
+    <h1>đây là dự án git đầu tiên dev b code abchhhhh</h1>
+    <p>dbhjdfsdbdjfs</p>
     <p>sjhjdshjjjhh</p>
+    <h1>đây là dự án git đầu tiên</h1>
+    <p>12312312312312312</p>
+    <p>sdsdsdsadsds</p>
+
+    <h1>DevB push ABC</h1>
+
 </body>
+
 </html>
